--- a/Seccion09_fragment/app/src/main/res/layout-land/activity_detalle.xml
+++ b/Seccion09_fragment/app/src/main/res/layout-land/activity_detalle.xml
@@ -3,27 +3,19 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="actividades.MainActivity">
+	tools:context="actividades.DetalleActivity">
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal">
+		android:orientation="vertical">
 
 		<fragment
 			android:id="@+id/fg_data"
 			android:name="Fragments.DataFragment"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="500px"
 			android:layout_weight="1"
 			tools:layout="@layout/fragment_data" />
-
-<!--		<fragment-->
-		<!--			android:id="@+id/fg_detalle"-->
-		<!--			android:name="Fragments.DetalleFragment"-->
-		<!--			android:layout_width="match_parent"-->
-		<!--			android:layout_height="match_parent"-->
-		<!--			android:layout_weight="1"-->
-		<!--			tools:layout="@layout/fragment_detalle" />-->
 	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
