--- a/Seccion10_tabs/app/src/main/res/layout/activity_main.xml
+++ b/Seccion10_tabs/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	tools:context=".MainActivity">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+<!--	<androidx.appcompat.widget.Toolbar-->
+<!--		android:id="@+id/toolbar"-->
+<!--		android:layout_width="409dp"-->
+<!--		android:layout_height="wrap_content"-->
+<!--		android:background="?attr/colorPrimary"-->
+<!--		android:minHeight="?attr/actionBarSize"-->
+<!--		android:theme="?attr/actionBarTheme"-->
+<!--		tools:layout_editor_absoluteX="1dp"-->
+<!--		tools:layout_editor_absoluteY="38dp" />-->
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<androidx.appcompat.widget.Toolbar
+			android:id="@+id/my_toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:background="?attr/colorPrimary"
+			android:elevation="4dp"
+			android:theme="@style/ThemeOverlay.AppCompat.Dark"
+			app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Hello World!"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent" />
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
