--- a/Seccion10_tabs/app/src/main/res/layout/activity_main.xml
+++ b/Seccion10_tabs/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	android:orientation="vertical"
+	tools:context=".activities.MainActivity">
 
-	<LinearLayout
+	<include
+		android:id="@+id/toolbar"
+		layout="@layout/action_bar" />
+
+	<com.google.android.material.tabs.TabLayout
+		android:id="@+id/tabs"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
-		<!--		<androidx.appcompat.widget.Toolbar-->
-		<!--			android:id="@+id/my_toolbar"-->
-		<!--			android:layout_width="match_parent"-->
-		<!--			android:layout_height="?attr/actionBarSize"-->
-		<!--			android:background="?attr/colorPrimary"-->
-		<!--			android:elevation="4dp"-->
-		<!--			android:theme="@style/ThemeOverlay.AppCompat.Dark"-->
-		<!--			app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
-		<include
-			android:id="@+id/toolbar"
-			layout="@layout/action_bar" />
+		android:layout_height="wrap_content">
 
-		<androidx.constraintlayout.widget.ConstraintLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+		<com.google.android.material.tabs.TabItem
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Primero" />
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="Hello World!"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent" />
-		</androidx.constraintlayout.widget.ConstraintLayout>
-	</LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<com.google.android.material.tabs.TabItem
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Segundo" />
+
+		<com.google.android.material.tabs.TabItem
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Tercero" />
+	</com.google.android.material.tabs.TabLayout>
+
+	<androidx.viewpager.widget.ViewPager
+		android:id="@+id/viewPager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" />
+</LinearLayout>
