--- a/Seccion11_NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/Seccion11_NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	android:fitsSystemWindows="true">
 
-	<TextView
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="horizontal">
+
+		<include
+			android:id="@+id/toolbar"
+			layout="@layout/action_bar" />
+
+		<FrameLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"></FrameLayout>
+	</LinearLayout>
+
+	<!--	Esta es la parte que emerge de la izquierda-->
+	<com.google.android.material.navigation.NavigationView
+		android:id="@+id/nav_view"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:layout_height="match_parent"
+		android:layout_gravity="start" />
+</androidx.drawerlayout.widget.DrawerLayout>
