--- a/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
+++ b/Seccion04_Ciudades/app/src/main/res/layout/list_view_item_ciudad.xml
@@ -74,6 +74,10 @@
 				android:text="Descripcion"
 				android:textColor="#FFFFFF"
 				android:textStyle="bold|italic"
+				android:shadowColor="#000"
+				android:shadowDx="5"
+				android:shadowDy="5"
+				android:shadowRadius="5"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/ivCiudadImagen" />
 
