--- a/Seccion11_NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/Seccion11_NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
@@ -8,21 +9,24 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal">
+		android:orientation="vertical">
 
 		<include
 			android:id="@+id/toolbar"
 			layout="@layout/action_bar" />
-
+		<!-- Esto es el espacio blanco normal -->
 		<FrameLayout
+			android:id="@+id/frame_layout"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"></FrameLayout>
 	</LinearLayout>
-
 	<!--	Esta es la parte que emerge de la izquierda-->
 	<com.google.android.material.navigation.NavigationView
-		android:id="@+id/nav_view"
+		android:id="@+id/navigation_view"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:layout_gravity="start" />
+		android:layout_gravity="start"
+		app:headerLayout="@layout/header_navigation_drawer"
+		app:menu="@menu/nav_options"
+		android:fitsSystemWindows="true"/>
 </androidx.drawerlayout.widget.DrawerLayout>
