--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_stickers.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_stickers.xml
@@ -1,18 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--	xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--	xmlns:tools="http://schemas.android.com/tools"-->
+<!--	android:layout_width="match_parent"-->
+<!--	android:layout_height="match_parent"-->
+<!--	tools:context=".Fragments.StickersFragment">-->
+<!--	<TextView-->
+<!--		android:layout_width="wrap_content"-->
+<!--		android:layout_height="wrap_content"-->
+<!--		android:text="Proximamente gordito..."-->
+<!--		android:textSize="30sp"-->
+<!--		app:layout_constraintBottom_toBottomOf="parent"-->
+<!--		app:layout_constraintEnd_toEndOf="parent"-->
+<!--		app:layout_constraintStart_toStartOf="parent"-->
+<!--		app:layout_constraintTop_toTopOf="parent" />-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".Fragments.StickersFragment">
+	android:layout_height="match_parent">
 
 	<TextView
+		android:id="@+id/error_message"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Proximamente gordito..."
-		android:textSize="30sp"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:padding="16dp"
+		android:textColor="@android:color/holo_red_dark" />
+
+	<ProgressBar
+		android:id="@+id/entry_activity_progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center" />
+</FrameLayout>
