--- a/BotoneraForgottera_stickers_v2/BotoneraForgottera/app/src/main/res/values/colors.xml
+++ b/BotoneraForgottera_stickers_v2/BotoneraForgottera/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
 	<color name="colorPrimary">#008577</color>
 	<color name="colorPrimaryDark">#00574B</color>
 	<color name="colorAccent">#D81B60</color>
+	<color name="inactiveAddButtonColor">#B3B3B3</color>
+	<color name="infoPageBackgroundColor">#EBEBEB</color>
+	<color name="actionBarArrowColor">@color/colorAccent</color>
 </resources>
