--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".Fragments.StickersCargandoFragment">
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/rvListadoAudios"
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:layout_editor_absoluteX="0dp"
-		tools:layout_editor_absoluteY="0dp" />
+		android:orientation="vertical">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+
+			<EditText
+				android:id="@+id/etBusqueda"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:ems="10"
+				android:inputType="textPersonName" />
+
+			<ImageButton
+				android:id="@+id/btBuscar"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:src="@android:drawable/ic_search_category_default" />
+		</LinearLayout>
+
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/rvListadoAudios"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
