--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
@@ -96,6 +96,17 @@
 				android:textColor="#3C3C3C"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent" />
+
+			<ImageView
+				android:id="@+id/ibCorazon"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="8dp"
+				android:layout_marginRight="8dp"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:srcCompat="@drawable/ic_like_1" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 	</androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
