--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/item_audio.xml
@@ -3,110 +3,82 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="500px"
+	android:layout_height="300px"
+	android:background="#80D8FF"
 	android:orientation="vertical">
 
-	<androidx.cardview.widget.CardView
+	<TextView
+		android:id="@+id/tvCiudadDescripcion"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:shadowColor="#000"
+		android:shadowDx="5"
+		android:shadowDy="5"
+		android:shadowRadius="5"
+		android:text="Descripcion"
+		android:textColor="#FFFFFF"
+		android:textStyle="bold|italic"
+		android:visibility="invisible"
+		tools:layout_editor_absoluteX="16dp"
+		tools:layout_editor_absoluteY="64dp" />
+
+	<TextView
+		android:id="@+id/tvCiudadNombre"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Nombre"
+		android:textColor="#FFFFFF"
+		android:textSize="18sp"
+		android:textStyle="bold"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/rvListadoTags"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
-		android:layout_marginTop="8dp"
+		android:layout_height="45dp"
+		app:layout_constraintTop_toBottomOf="@+id/tvCiudadNombre"
+		tools:layout_editor_absoluteX="8dp" />
+
+	<View
+		android:id="@+id/view"
+		android:layout_width="wrap_content"
+		android:layout_height="1dp"
+		android:background="#525252"
+		app:layout_constraintBottom_toBottomOf="parent"
+		tools:layout_editor_absoluteX="8dp" />
+
+	<ImageButton
+		android:id="@+id/btPlay"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
 		android:layout_marginEnd="8dp"
 		android:layout_marginRight="8dp"
-		app:cardBackgroundColor="#03A9F4"
-		app:cardCornerRadius="10dp"
+		android:background="@drawable/myboton"
+		android:padding="3dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/btShare"
+		app:srcCompat="@android:drawable/ic_media_play" />
+
+	<ImageButton
+		android:id="@+id/ibCorazon"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:background="@drawable/myboton"
+		android:padding="10dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
+		app:srcCompat="@drawable/ic_like_1" />
 
-		<androidx.constraintlayout.widget.ConstraintLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent">
-
-			<View
-				android:id="@+id/view"
-				android:layout_width="wrap_content"
-				android:layout_height="1dp"
-				android:layout_marginBottom="50dp"
-				android:background="#525252"
-				app:layout_constraintBottom_toBottomOf="parent" />
-
-			<TextView
-				android:id="@+id/tvCiudadDescripcion"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginStart="8dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginTop="16dp"
-				android:shadowColor="#000"
-				android:shadowDx="5"
-				android:shadowDy="5"
-				android:shadowRadius="5"
-				android:text="Descripcion"
-				android:textColor="#FFFFFF"
-				android:textStyle="bold|italic"
-				android:visibility="invisible"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@+id/tvCiudadNombre" />
-
-			<TextView
-				android:id="@+id/tvCiudadNombre"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginStart="8dp"
-				android:layout_marginLeft="8dp"
-				android:layout_marginTop="16dp"
-				android:text="Nombre"
-				android:textColor="#FFFFFF"
-				android:textSize="18sp"
-				android:textStyle="bold"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent" />
-
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/rvListadoTags"
-				android:layout_width="match_parent"
-				android:layout_height="95dp"
-				app:layout_constraintBottom_toTopOf="@+id/view"
-				app:layout_constraintTop_toBottomOf="@+id/tvCiudadDescripcion"
-				tools:layout_editor_absoluteX="-7dp" />
-
-			<Button
-				android:id="@+id/btPlay"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginEnd="16dp"
-				android:layout_marginRight="16dp"
-				android:background="@android:color/transparent"
-				android:text="Play"
-				android:textColor="#3C3C3C"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toStartOf="@+id/btShare" />
-
-			<Button
-				android:id="@+id/btShare"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginEnd="8dp"
-				android:layout_marginRight="8dp"
-				android:background="@android:color/transparent"
-				android:text="SHARE"
-				android:textColor="#3C3C3C"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent" />
-
-			<ImageView
-				android:id="@+id/ibCorazon"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:layout_marginTop="8dp"
-				android:layout_marginEnd="8dp"
-				android:layout_marginRight="8dp"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:srcCompat="@drawable/ic_like_1" />
-		</androidx.constraintlayout.widget.ConstraintLayout>
-	</androidx.cardview.widget.CardView>
+	<ImageButton
+		android:id="@+id/btShare"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginRight="8dp"
+		android:background="@drawable/myboton"
+		android:padding="6dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/ibCorazon"
+		app:srcCompat="@android:drawable/ic_menu_share" />
 </androidx.constraintlayout.widget.ConstraintLayout>
