--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/layout/fragment_audios.xml
@@ -26,8 +26,10 @@
 
 			<com.google.android.material.button.MaterialButton
 				android:id="@+id/btBuscar"
-				android:layout_width="52dp"
-				android:layout_height="52dp"
+				android:layout_width="@dimen/filtrosIconoWidth"
+				android:layout_height="@dimen/filtrosIconoHeight"
+				android:layout_marginTop="1dp"
+				android:layout_marginRight="5dp"
 				android:insetLeft="0dp"
 				android:insetTop="0dp"
 				android:insetRight="0dp"
@@ -36,7 +38,23 @@
 				app:icon="@drawable/ic_search_24px"
 				app:iconGravity="textStart"
 				app:iconPadding="0dp"
-				app:iconSize="40dp" />
+				app:iconSize="30dp" />
+
+			<com.google.android.material.button.MaterialButton
+				android:id="@+id/btTags"
+				android:layout_width="@dimen/filtrosIconoWidth"
+				android:layout_height="@dimen/filtrosIconoHeight"
+				android:layout_marginTop="1dp"
+				android:layout_marginRight="5dp"
+				android:insetLeft="0dp"
+				android:insetTop="0dp"
+				android:insetRight="0dp"
+				android:insetBottom="0dp"
+				app:backgroundTint="#D81B60"
+				app:icon="@drawable/ic_view_list_24px"
+				app:iconGravity="textStart"
+				app:iconPadding="0dp"
+				app:iconSize="35dp" />
 
 		</LinearLayout>
 
