--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values/colors.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#008577</color>
-	<color name="colorPrimaryDark">#00574B</color>
-	<color name="colorAccent">#D81B60</color>
+<!--	<color name="colorPrimary">#008577</color>-->
+<!--	<color name="colorPrimaryDark">#00574B</color>-->
+	<color name="colorPrimaryDark">#147383</color>
+	<color name="colorPrimary">#3494B8</color>
+	<color name="colorAccent">#FF6E40</color>
 	<color name="colorBoton1">#82B1FF</color>
 	<color name="colorBotonTag">#F7A404</color>
 	<!-- - - - - - - - - - - WhatsApp Stickers - - - - - - - - - - - -  -->
