--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values/dimensiones.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/res/values/dimensiones.xml
@@ -2,4 +2,6 @@
 <resources>
 	<dimen name="iconoWidth">35dp</dimen>
 	<dimen name="iconoheight">35dp</dimen>
+	<dimen name="filtrosIconoWidth">35dp</dimen>
+	<dimen name="filtrosIconoHeight">35dp</dimen>
 </resources>
