--- a/SayTheWord/app/src/main/res/layout/fragment_juego.xml
+++ b/SayTheWord/app/src/main/res/layout/fragment_juego.xml
@@ -38,7 +38,7 @@
 					app:layout_constraintTop_toTopOf="parent">
 
 					<TextView
-						android:id="@+id/tvJuegoPalabraArriba"
+						android:id="@+id/tvJuegoCantidadPalabras"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:text="TextView"
@@ -46,6 +46,17 @@
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toTopOf="parent" />
+
+					<TextView
+						android:id="@+id/tvJuegoPalabraArriba"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="24dp"
+						android:text="TextView"
+						android:textSize="30sp"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
 
 					<com.google.android.material.button.MaterialButton
 						android:id="@+id/btMostrarRespuestaJuego"
@@ -80,10 +91,21 @@
 							android:layout_height="wrap_content"
 							android:text="TextView"
 							android:textSize="30sp"
-							app:layout_constraintBottom_toBottomOf="parent"
 							app:layout_constraintEnd_toEndOf="parent"
 							app:layout_constraintStart_toStartOf="parent"
 							app:layout_constraintTop_toTopOf="parent" />
+
+						<TextView
+							android:id="@+id/tvJuegoPalabraAbajo2"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="24dp"
+							android:text="TextView"
+							android:textSize="30sp"
+							app:layout_constraintBottom_toBottomOf="parent"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAbajo" />
 					</androidx.constraintlayout.widget.ConstraintLayout>
 
 					<com.google.android.material.button.MaterialButton
@@ -93,6 +115,30 @@
 						android:layout_height="wrap_content"
 						android:layout_marginTop="32dp"
 						android:text="Next"
+						app:backgroundTint="#82B1FF"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+
+					<com.google.android.material.button.MaterialButton
+						android:id="@+id/btPrevious"
+						style="@style/Widget.MaterialComponents.Button"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginEnd="24dp"
+						android:text="Previous"
+						app:backgroundTint="#82B1FF"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toStartOf="@+id/btNext"
+						app:layout_constraintStart_toStartOf="parent" />
+
+					<com.google.android.material.button.MaterialButton
+						android:id="@+id/btRestart"
+						style="@style/Widget.MaterialComponents.Button"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="32dp"
+						android:text="Restart"
 						app:backgroundTint="#82B1FF"
 						app:layout_constraintBottom_toBottomOf="parent"
 						app:layout_constraintEnd_toEndOf="parent"
