--- a/SayTheWord/app/src/main/res/layout/recycler_view_item.xml
+++ b/SayTheWord/app/src/main/res/layout/recycler_view_item.xml
@@ -41,6 +41,7 @@
 					android:layout_gravity="center"
 					android:gravity="center"
 					android:text="Palabra"
+					android:textSize="18dp"
 					android:textStyle="bold"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +96,7 @@
 						android:layout_gravity="center"
 						android:gravity="center"
 						android:text="Titulo"
+						android:textSize="18dp"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +110,7 @@
 						android:layout_marginTop="10dp"
 						android:gravity="center"
 						android:text="Titulo"
+						android:textSize="18dp"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
